force-app/main/default/objects/npe01__OppPayment__c/fields/npsp4hub__Collected_Through__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Collected_Through__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collected Through</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.npe01__Opportunity__c</field>
            <operation>equals</operation>
            <valueField>cpm__Installment__c.npsp4hub__Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cpm__Installment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>