force-app/main/default/objects/npe01__OppPayment__c/fields/npsp4hub__Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Payment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Profile</label>
    <referenceTo>cpm__Payment_Profile__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>