force-app/main/default/objects/npe01__OppPayment__c/fields/npsp4hub__Target__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>npsp4hub__Payment_Processor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sepa Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>