force-app/main/default/objects/npe01__OppPayment__c/fields/npsp__DebitType__c.field-meta.xml
<CustomField>
    <fullName>npsp__DebitType__c</fullName>
    <description>Indicates the type of debit.</description>
    <label>Debit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>