force-app/main/default/objects/npe01__OppPayment__c/fields/SFFR_bank_batch_key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_bank_batch_key__c</fullName>
    <label>SFFR_bank_batch_ext_key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>