force-app/main/default/objects/npe01__OppPayment__c/fields/SFFR_Bank_Bunch__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank___c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank </label>
    <referenceTo>SFFR___c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>