force-app/main/default/objects/npe01__OppPayment__c/fields/SFFR_Bank_Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Payment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Payment Group</label>
    <referenceTo>SFFR_Payment_Group__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>