force-app/main/default/objects/npe01__OppPayment__c/fields/SFFR_Bunch__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bunch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bunch</label>
    <referenceTo>SFFR_Bunch__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>