force-app/main/default/objects/npe01__OppPayment__c/fields/SFFR_Payment_Group_batch_key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payment_Group_batch_key__c</fullName>
    <label>Bank Payment Group External Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>